# hs-urbandict

./: .gitattributes  .gitignore  README.md  hs-urbandict.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
test/data/: apple.html  browse.html  last.html  main.html
