name:                hs-urbandict
version:             0.1.0.0
synopsis:            Urban dictionary in the command line
description:         Please see README.md
homepage:            http://github.com/YS-L/hs-urbandict#readme
license:             BSD3
license-file:        LICENSE
author:              YS-L
maintainer:          liauys@gmail.com
copyright:           2015 YS-L
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , HTTP
                     , MissingH
                     , split
                     , tagsoup
                     , HDBC
                     , HDBC-sqlite3
                     , bytestring
                     , http-conduit
                     , regex-compat
  default-language:    Haskell2010

executable urbandict
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-urbandict
                     , MissingH
  default-language:    Haskell2010

test-suite hs-urbandict-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-urbandict
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hs-urbandict
